--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@
 }
 .carousel-inner {
   max-width: 100%;
-  height: auto;;
+  height: auto;
 }
 
 /* main intro */
@@ -80,10 +80,13 @@ color: white;
 /* Cards */
 .cards {
   display: flex;
-  margin-inline: 20px;
-  padding-top: 50px;
+  padding-top: 40px;
+  justify-content: center;
+  padding-bottom: 40px;
+}
+.card {
   justify-content: space-between;
-  padding-bottom: 50px;
+ margin: 25px;
 }
 .card-body {
   font-size: 10px;
