--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,316 +1,19 @@
+// variables
+@import 'variables';
 
-// Estilos para pantallas de al menos 400px de ancho
-@media (max-width: 400px) {
-    .cards {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 90%;
-      margin-bottom: 1em;
-      justify-content: center;
-    }
-  
-    .map {
-      width: 90%;
-      max-width: 399px;
-      height: auto;
-    }
-  }
-  
-  // Estilos para pantallas de 400 a 670px
-  @media (min-width: 400px) and (max-width: 670px) {
-    .map {
-      display: none;
-    }
-  
-    .cards {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 90%;
-      margin-bottom: 1em;
-    }
-  }
-  
-  // Estilos para pantallas de al menos 670px y menos 1200px de ancho
-  @media (min-width: 670px) and (max-width: 1200px) {
-    footer {
-      padding: 2em;
-    }
-  
-    .map {
-      max-width: 750px;
-    }
-    .cards {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        align-items: center;  
-      }
-  }
+// mixins
+@import 'mixins';
 
+// globales
+@import 'globals';
 
-// Estilos section portfolio
-.sectionportfolio {
-  background-color: black;
-  color: white;
-  padding: 60px;
-}
+// components
+@import 'components/map';
+@import 'components/mediaqueries';
 
-.portfolio {
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); 
-  gap: 10px;
-}
-
-.grid-item {
-  background-color: white;
-  padding: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  
-  img {
-    width: 100%;
-    max-height: 400px;
-    height: auto;
-    width: auto;
-}
-}
-
-/* Variables */
-$color-beige: beige;
-$color-black: black;
-$color-white: white;
-$color-grey: #676464;
-$color-dark-grey: rgb(63, 49, 49);
-$color-light-brown: rgb(195, 171, 143);
-
-$font-size-small: 10px;
-$font-size-medium: 15px;
-$font-size-large: 60px;
-
-$padding-small: 10px;
-$padding-medium: 20px;
-$padding-large: 40px;
-
-/* Mixins */
-@mixin flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Reset */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-/* Bootstrap Navbar */
-.navbar-brand {
-  background-color: $color-beige;
-}
-
-.container-fluid {
-  background-color: $color-beige;
-}
-
-.carousel-inner {
-  max-width: 100%;
-  height: auto;
-}
-
-/* Main Intro */
-.presentacion {
-  background-color: $color-light-brown;
-  color: $color-white;
-
-  h1 {
-    font-size: $font-size-large;
-    text-align: left;
-    padding: $padding-large $padding-medium;
-  }
-
-  p {
-    font-size: $font-size-medium;
-    padding: $padding-small $padding-medium;
-  }
-}
-
-/* Cards */
-.cards {
-  @include flex-center;
-  padding: $padding-medium 0;
-}
-
-.card {
-  @include flex-center;
-  margin: $padding-medium;
-}
-
-.card-body {
-  font-size: $font-size-small;
-}
-
-.pedircita {
-  background-color: $color-black;
-  font-size: $font-size-small;
-  color: $color-white;
-  border: none;
-  text-align: center;
-  padding: $padding-small $padding-medium;
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
-
-  &:hover {
-    background-color: $color-dark-grey;
-  }
-}
-
-/*div de wsp */
-.icon-wsp { 
-position: fixed;
-right: 50px;
-bottom: 25px;
-transition: 2s;
-&:hover{ 
-    transform: rotate(360deg);
-}
-}
-
-/* Footer */
-footer {
-  font-size: $font-size-small;
-  text-align: center;
-  background-color: $color-light-brown;
-  height: 200px;
-  color: $color-white;
-
-  a {
-    font-size: $font-size-medium;
-    color: $color-grey;
-  }
-
-  div {
-    padding-top: $padding-medium;
-  }
-
-  div p {
-    padding: $padding-medium 0;
-  }
-}
-
-/* Section About Me */
-.sectionaboutme {
-  background-color: $color-black;
-  color: $color-white;
-  padding: $padding-large;
-
-  h2 {
-    padding: $padding-medium 0;
-  }
-}
-
-.sectionaboutimg img {
-  max-width: 100%;
-  height: auto;
-  display: flex;
-}
-
-/* Section Contact */
-.contact {
-  background-color: $color-light-brown;
-  padding: $padding-large;
-  color: $color-white;
-
-  a {
-    font-size: $font-size-small;
-
-    &:hover {
-      font-size: $font-size-medium;
-      cursor: pointer;
-    }
-  }
-}
-
-/* Studio Section */
-.studio {
-  background-color: $color-black;
-  color: $color-white;
-  padding: $padding-large;
-
-  h3 {
-    padding-bottom: $padding-medium;
-  }
-
-  p {
-    padding-bottom: $padding-medium;
-  }
-}
-
-/* Portfolio Section */
-.sectionportfolio {
-  background-color: $color-black;
-  color: $color-white;
-  padding: $padding-large;
-
-  .portfolio {
-    max-width: 800px;
-    margin: 0 auto;
-
-    .grid-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 10px;
-
-      .grid-item {
-        background-color: $color-white;
-        padding: $padding-small;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        @include flex-center;
-
-        img {
-          width: 100%;
-          max-height: 400px;
-          height: auto;
-          width: auto;
-        }
-      }
-    }
-  }
-}
-
-/* Services Section */
-.servicios {
-  background-color: $color-black;
-  padding: $padding-medium $padding-large;
-  color: $color-white;
-  justify-content: left;
-
-  ul {
-    list-style-type: none;
-    justify-content: center;
-    text-align:left;
-
-    li {
-      padding: $padding-small $padding-medium;
-      text-align: left;
-    }
-  }
-
-  h2 {
-    justify-content: center;
-    padding-bottom: 20px;
-    padding-top: 20px;
-  }
-
-}
+// secciones
+@import 'sections/portfolio';
+@import 'sections/about';
+@import 'sections/contact';
+@import 'sections/presentation';
+@import 'sections/services';
